stopped animated items overflowing their container

--- a/site/htdocs/css/src/_global.scss
+++ b/site/htdocs/css/src/_global.scss
@@ -243,26 +243,3 @@ width: 84px;
 
 
 
-
-
-
-
-// remove branding
-#mastHead, #navigation, h1, .Error, #searchForm, #loginform, #footer p {
-    display: none;
-}
-body {
-    background: #fff;
-    padding: 20px 0;
-}
-p, a {
-    color: #000;
-}
-p {
-    background: #cecece;
-    border: 1px solid #666;
-    padding: 12px 6px;
-    text-indent: 0;
-    margin: 6px 0;
-}
-
